--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,31 @@
 {% load staticfiles %}
 <html>
 <head>
-    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen" />
+<link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
+rel="stylesheet" media="screen">
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<a class="navbar-brand" href="#">MyTweets</a>
+<p class="navbar-text navbar-right">User Profile Page</p>
+</nav>
+<div class="container">
 {% block content %}
-<h1>Hello {{name}}!</h1>
+<div class="row clearfix">
+<div class="col-md-12 column">
+{% for tweet in tweets %}
+<div class="well">
+<p>{{ tweet.text }}</p>
+</div>
+{% endfor %}
+</div>
+</div>
 {% endblock %}
+</div>
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+<p class="navbar-text navbar-right">Footer </p>
 
+</nav>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
