Seventh commit. Added hashtags

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,23 +5,17 @@
 rel="stylesheet" media="screen">
 </head>
 <body>
+
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <a class="navbar-brand" href="#">MyTweets</a>
 <p class="navbar-text navbar-right">User Profile Page</p>
 </nav>
+<div style="margin-top:50px"></div>
 <div class="container">
 {% block content %}
-<div class="row clearfix">
-<div class="col-md-12 column">
-{% for tweet in tweets %}
-<div class="well">
-<p>{{ tweet.text }}</p>
-</div>
-{% endfor %}
-</div>
-</div>
 {% endblock %}
 </div>
+
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 <p class="navbar-text navbar-right">Footer </p>
 
