--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,13 +1,28 @@
 {% extends "base.html" %}
-{% block content %}
-<div class="row clearfix">
-<div class="col-md-12 column">
-
-{% for tweet in tweets %}
-    <div class="well">
-    {{ tweet.text }}
+  {% block content %}
+  <div class="row clearfix">
+    <div class="col-md-12 column">
+        <h3>&nbsp;</h3>
+      <form method="post" action="post/">{% csrf_token %}
+        <div class="col-md-8 col-md-offset-2 fieldWrapper">
+{#          {{ form.text.errors }}#}
+{#          {{ form.text }}#}
+            <input type="text" name="text">
+            {{ form.text }}
+        </div>
+{#        {{ form.country.as_hidden }}#}
+        <div>
+          <input type="submit" value="post">
+        </div>
+      </form>
     </div>
-{% endfor %}
-</div>
-</div>
-{% endblock %}
+    <h3>&nbsp;</h3>
+    <div class="col-md-12 column">
+      {% for tweet in tweets %}
+      <div class="well">
+        <span>{{ tweet.text }}</span>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+  {% endblock %}
