--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@ rel="stylesheet" media="screen">
 <p class="navbar-text navbar-right">Footer </p>
 
 </nav>
+<script src="{% static 'jquery-2.1.4.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
