--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,27 @@
 {% load staticfiles %}
-<html>
-<head>
-<link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
-rel="stylesheet" media="screen">
-</head>
-<body>
-
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-<a class="navbar-brand" href="#">MyTweets</a>
-<p class="navbar-text navbar-right">User Profile Page</p>
-</nav>
-<div style="margin-top:50px"></div>
-<div class="container">
-{% block content %}
-{% endblock %}
-</div>
-
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-<p class="navbar-text navbar-right">Footer </p>
-
-</nav>
-<script src="{% static 'jquery-2.1.4.min.js' %}"></script>
-<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-</body>
-</html>
+  <html>
+    <head>
+      <link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
+        rel="stylesheet" media="screen">
+        {% block css %}
+        {% endblock %}
+    </head>
+    <body>
+      <nav class="navbar navbar-default" role="navigation">
+        <a class="navbar-brand" href="#">MyTweets</a>
+        <p class="navbar-text navbar-right">User Profile Page</p>
+      </nav>
+      <div class="container">
+        {% block content %}
+        {% endblock %}
+      </div>
+      <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+        <p class="navbar-text navbar-right">Footer </p>
+      </nav>
+      <script src="{% static 'jquery-2.1.4.min.js' %}"></script>
+      <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+      <script src="{% static 'base.js' %}"></script>
+        {% block js %}
+        {% endblock %}
+    </body>
+  </html>
